<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:id="@+id/turnText" android:text="@string/turn" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_gravity="center" android:textSize="30sp"
        android:paddingBottom="10.0dip" />
    <TextView android:id="@+id/userScore" android:text="@string/your_score" android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView android:id="@+id/computerScore" android:text="@string/computer_score" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:paddingBottom="10.0dip" />

    <ImageView
        android:id="@+id/diceView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/dice1" />

    <LinearLayout
        android:orientation="horizontal"
        android:paddingLeft="4.0dip"
        android:paddingTop="5.0dip"
        android:paddingRight="4.0dip"
        android:paddingBottom="1.0dip"
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:layout_below="@+id/TextView01">

        <Button
            android:id="@+id/rollButton"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:text="@string/roll"
            android:onClick="roll" />

        <Button
            android:id="@+id/holdButton"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:text="@string/hold"
            android:onClick="hold" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:text="@string/reset"
            android:onClick="reset" />

    </LinearLayout>

</LinearLayout>
